kubernetes/cluster/extras/vaultwarden/vaultwarden-backup.yaml
# Service: Vaultwarden Backup
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden-backup
  namespace: extras
  labels:
    app.kubernetes.io/name: vaultwarden-backup
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: vaultwarden-backup
  strategy:
    type: Recreate
  revisionHistoryLimit: 1
  template:
    metadata:
      namespace: extras
      labels:
        app.kubernetes.io/name: vaultwarden-backup
    spec:
      restartPolicy: Always
      containers:
        - name: vaultwarden-backup
          image: bruceforce/vaultwarden-backup:latest
          resources:
            requests:
              memory: 10M
              cpu: 10m
            limits:
              memory: 50M
              cpu: 50m
          volumeMounts:
            - name: vaultwarden-data
              mountPath: /data
            - name: vaultwarden-backup
              mountPath: /backup
      volumes:
        - name: vaultwarden-data
          persistentVolumeClaim:
            claimName: vaultwarden-data
        - name: vaultwarden-backup
          persistentVolumeClaim:
            claimName: vaultwarden-backup
