kubernetes/cluster/extras/vaultwarden/vaultwarden.yaml
# Service: Vaultwarden
# Ingress: vault.brhd.io
# Label: app.kubernetes.io/name: vaultwarden
---
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  namespace: extras
  labels:
    app.kubernetes.io/name: vaultwarden
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
  selector:
    app.kubernetes.io/name: vaultwarden
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden
  namespace: extras
  labels:
    app.kubernetes.io/name: vaultwarden
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: vaultwarden
  strategy:
    type: Recreate
  revisionHistoryLimit: 1
  template:
    metadata:
      namespace: extras
      labels:
        app.kubernetes.io/name: vaultwarden
    spec:
      restartPolicy: Always
      containers:
        - name: vaultwarden
          image: vaultwarden/server:1.32.5
          resources:
            requests:
              memory: 200M
              cpu: 100m
            limits:
              memory: 1G
              cpu: 1000m
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name: vaultwarden-data
              mountPath: /data
      volumes:
        - name: vaultwarden-data
          persistentVolumeClaim:
            claimName: vaultwarden-data
